public enum ChipsType {
    DORITOS,
    LAYS,
    SOURCREAMANDONION
}
