public class DeliApp {

    public static void main(String[] args) {
        UserInterface userInterface = new UserInterface();
        userInterface.runApp();
    }
}
