public enum DrinkType {
    WATER,
    COKE,
    SPRITE,
    SWEETTEA,
    UNSWEETTEA,
    MOUNTAINDEW,
    SIGNATUREDRINK
}
