public enum PremiumTopping {
    STEAK,
    HAM,
    SALAMI,
    ROASTBEEF,
    CHICKEN,
    BACON,
    AMERICAN,
    PROVOLONE,
    CHEDDAR,
    SWISS
}
