public enum Sauces {
    MAYO,
    MUSTARD,
    KETCHUP,
    RANCH,
    THOUSANDISLAND,
    VINAIGRETTE
}
