public enum SaucesType {
    MAYO,
    MUSTARD,
    KETCHUP,
    RANCH,
    THOUSANDISLAND,
    VINAIGRETTE
}
