public enum ToppingType {
    LETTUCE,
    PEPPERS,
    ONIONS,
    TOMATOES,
    JALEPENOS,
    CUCUMBERS,
    PICKLES,
    GUACAMOLE,
    MUSHROOMS
}
