package enums;

public enum BreadType {
    WHITE,
    WHEAT,
    RYE,
    WRAP
}
