package enums;

public enum CheeseType {
    AMERICAN,
    PROVOLONE,
    CHEDDAR,
    SWISS,
    NOCHEESE
}
