package enums;

public enum DrinkSize {
    SMALL,
    MEDIUM,
    LARGE
}
