package enums;

public enum MeatType {
    STEAK,
    HAM,
    SALAMI,
    ROASTBEEF,
    CHICKEN,
    BACON,
    NOMEAT
}
