package enums;

public enum Sides {
    AUJUS,
    SAUCE
}
