package interfaces;

public interface Item extends Priceable{
    String toStringForCsv();
}
