package interfaces;

public interface Priceable {
    double getPrice();
}
